--- a/css/swipebox.min的副本.css
+++ b/css/swipebox.min的副本.css
@@ -314,3 +314,57 @@ html.swipebox-html.swipebox-touch {
 
 }
 
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+    #swipebox-close {
+        top: 0px;
+        right: 1vw;
+        width: 11vw;
+        height: 11vw;
+    }
+    #swipebox-arrows {
+        width: 100vw;
+        /*max-width: 800px*/
+        margin: auto;
+    }
+
+    .arrows-icon{
+        width: .6em;
+
+    }
+    .arrows-icon-close{
+        width: .4em;
+
+    }
+    #swipebox-slider .slide-loading {
+    
+    background-size: .8em .8em;
+    }
+
+
+    }
+
+
+
+
+
+
+
+#swipebox-overlay {
+    background: #0d0d0d
+}
+#swipebox-bottom-bar,
+#swipebox-top-bar {
+    text-shadow: 1px 1px 1px #000;
+    background: rgba(0,0,0,0);
+    opacity: 1;
+}
+#swipebox-top-bar {
+    color: #fff!important;
+    font-size: 15px;
+    line-height: 43px;
+    font-family: Helvetica, Arial, sans-serif
+}
