--- a/css/css.css
+++ b/css/css.css
@@ -491,6 +491,7 @@ align-items: center;
   text-align: center;
   margin: 6vw;
   font-size: 1.2em;
+  font-weight: 600;
 }
 #camera-box{
   display: flex;
@@ -942,6 +943,7 @@ display: flex;
     padding-top: 0px;
     margin: auto;
     font-size: 1.2em;
+    font-weight: 600
   }
 
   .gallery-text{
