--- a/css/css.css
+++ b/css/css.css
@@ -1306,7 +1306,8 @@ border: 0px solid yellow;
 #contact{
   display: flex;
   position: relative;
-  margin: 8vw;
+  margin-left: 8vw;
+  margin-bottom: 8vw;
   margin-top: 2em;
   border: 0px solid green;
 }
