--- a/css/css.css
+++ b/css/css.css
@@ -72,7 +72,8 @@ text-align: left;
   align-items: center;
 }
 
-.selectedpage{
+.
+notselectedpage{
   background-color: #fefefe;
 }
 a{
@@ -1108,7 +1109,8 @@ header{
   background-color: rgba(0,0,0,0);
   
 }
-.selectedpage{
+.
+notselectedpage{
   color: #e0e0e0;
   background-color: rgba(0,0,0,0);
 }
