--- a/css/css.css
+++ b/css/css.css
@@ -72,8 +72,7 @@ text-align: left;
   align-items: center;
 }
 
-.
-notselectedpage{
+.notselectedpage{
   background-color: #fefefe;
 }
 a{
@@ -1109,8 +1108,7 @@ header{
   background-color: rgba(0,0,0,0);
   
 }
-.
-notselectedpage{
+.notselectedpage{
   color: #e0e0e0;
   background-color: rgba(0,0,0,0);
 }
