--- a/css/css.css
+++ b/css/css.css
@@ -1102,12 +1102,19 @@ header{
   align-items: center;
 }
 
+.notselectedpage:hover{
+  cursor: pointer;
+  color: #fefefe;
+  background-color: rgba(0,0,0,0);
+  
+}
 .horizontal:hover{
   cursor: pointer;
   color: #e0e0e0;
   background-color: rgba(0,0,0,0);
   
 }
+
 .notselectedpage{
   color: #e0e0e0;
   background-color: rgba(0,0,0,0);
