--- a/css/css.css
+++ b/css/css.css
@@ -1108,7 +1108,7 @@ header{
   background-color: rgba(0,0,0,0);
   
 }
-.horizontal:hover{
+.mainpagenav:hover{
   cursor: pointer;
   color: #e0e0e0;
   background-color: rgba(0,0,0,0);
