--- a/css/css.css
+++ b/css/css.css
@@ -29,7 +29,7 @@ html, body, main{
   height: 100%;
   width: 100vw;
   background-color: #f6f6f6;
-  font-family: 'Open Sans', serif;
+  font-family: 'Open Sans', serif, Arial, sans-serif;
 }
 
 body{
