--- a/css/opensans.css
+++ b/css/opensans.css
@@ -7,7 +7,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src:  url("../opensans/cyrillic-ext.woff2") format('woff2');
+  src:  url("../opensans/cyrillic-ext.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Regular.ttf') format('truetype');
   unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
 /* cyrillic */
@@ -15,7 +16,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src:  url("../opensans/cyrillic.woff2") format('woff2');
+  src:  url("../opensans/cyrillic.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Regular.ttf') format('truetype');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -23,7 +25,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src:  url("../opensans/greek-ext.woff2") format('woff2');
+  src:  url("../opensans/greek-ext.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Regular.ttf') format('truetype');
   unicode-range: U+1F00-1FFF;
 }
 /* greek */
@@ -31,7 +34,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src:  url("../opensans/greek.woff2") format('woff2');
+  src:  url("../opensans/greek.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Regular.ttf') format('truetype');
   unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -39,7 +43,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src:  url("../opensans/vietnamese.woff2") format('woff2');
+  src:  url("../opensans/vietnamese.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Regular.ttf') format('truetype');
   unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -47,7 +52,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src:  url("../opensans/latin-ext.woff2") format('woff2');
+  src:  url("../opensans/latin-ext.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Regular.ttf') format('truetype');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -55,7 +61,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src:  url("../opensans/latin.woff2") format('woff2');
+  src:  url("../opensans/latin.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Regular.ttf') format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -67,7 +74,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src:  url("../opensans/cyrillic-ext-600.woff2") format('woff2');
+  src:  url("../opensans/cyrillic-ext-600.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Semibold.ttf') format('truetype');
   unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
 /* cyrillic */
@@ -75,7 +83,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src:  url("../opensans/cyrillic-600.woff2") format('woff2');
+  src:  url("../opensans/cyrillic-600.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Semibold.ttf') format('truetype');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -83,7 +92,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src:  url("../opensans/greek-ext-600.woff2") format('woff2');
+  src:  url("../opensans/greek-ext-600.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Semibold.ttf') format('truetype');
   unicode-range: U+1F00-1FFF;
 }
 /* greek */
@@ -91,7 +101,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src:  url("../opensans/greek-600.woff2") format('woff2');
+  src:  url("../opensans/greek-600.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Semibold.ttf') format('truetype');
   unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -99,7 +110,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src:  url("../opensans/vietnamese-600.woff2") format('woff2');
+  src:  url("../opensans/vietnamese-600.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Semibold.ttf') format('truetype');
   unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -107,7 +119,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src:  url("../opensans/latin-ext-600.woff2") format('woff2');
+  src:  url("../opensans/latin-ext-600.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Semibold.ttf') format('truetype');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -115,7 +128,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src:  url("../opensans/latin-600.woff2") format('woff2');
+  src:  url("../opensans/latin-600.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Semibold.ttf') format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -126,7 +140,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src:  url("../opensans/cyrillic-ext-700.woff2") format('woff2');
+  src:  url("../opensans/cyrillic-ext-700.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Bold.ttf') format('truetype');
   unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
 /* cyrillic */
@@ -134,7 +149,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src:  url("../opensans/cyrillic-700.woff2") format('woff2');
+  src:  url("../opensans/cyrillic-ext-700.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Bold.ttf') format('truetype');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -142,7 +158,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src:  url("../opensans/greek-ext-700.woff2") format('woff2');
+  src:  url("../opensans/cyrillic-ext-700.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Bold.ttf') format('truetype');
   unicode-range: U+1F00-1FFF;
 }
 /* greek */
@@ -150,7 +167,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src:  url("../opensans/greek-700.woff2") format('woff2');
+  src:  url("../opensans/greek-700.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Bold.ttf') format('truetype');
   unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -158,7 +176,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src:  url("../opensans/vietnamese-700.woff2") format('woff2');
+  src:  url("../opensans/vietnamese-700.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Bold.ttf') format('truetype');
   unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -166,7 +185,8 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src:  url("../opensans/latin-ext-700.woff2") format('woff2');
+  src:  url("../opensans/latin-ext-700.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Bold.ttf') format('truetype');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -174,6 +194,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src:  url("../opensans/latin-700.woff2") format('woff2');
+  src:  url("../opensans/latin-700.woff2") format('woff2'),
+        url('../open-sans/OpenSans-Bold.ttf') format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
