--- a/css/css.css
+++ b/css/css.css
@@ -1104,7 +1104,7 @@ header{
 
 .notselectedpage:hover{
   cursor: pointer;
-  color: #fefefe;
+  color: #9a9a9a;
   background-color: rgba(0,0,0,0);
   
 }
