--- a/css/css.css
+++ b/css/css.css
@@ -80,7 +80,7 @@ a{
   color: inherit;
 }
 a:hover{
-  color: inherit;
+  color: red;
 }
 #drawer a:active{
   background-color: #fefefe;
@@ -1129,9 +1129,7 @@ display: flex;
 .dark-banner-text{
   color:#9a9a9a;
 }
-.dark-banner-text:hover{
-  color:#9a9a9a;
-}
+
 #below-banner{
     background-color: #f6f6f6;
    position: relative;
