--- a/css/css.css
+++ b/css/css.css
@@ -60,6 +60,8 @@ border: 0px solid red;
 }
 #drawer li{
   color: #666666;
+color: yellow;
+
   font-size: 1.06em;
   margin:0px;
   padding-left: 10vw;
@@ -81,6 +83,7 @@ a{
 }
 a:hover{
   color: red;
+  color: inherit;
 }
 #drawer a:active{
   background-color: #fefefe;
