--- a/css/css.css
+++ b/css/css.css
@@ -1561,14 +1561,18 @@ width: 50%;
 .notselectedpage:hover{
   cursor: pointer;
   color: #9a9a9a;
+  color: #aaaaaa;
   background-color: rgba(0,0,0,0);
   
+}
+/*.newcolor{
+
 }
 .newcolor:hover{
   cursor: pointer;
   color: #fefefe !important;
   background-color: rgba(0,0,0,0);
-}
+}*/
 
 
 }
