--- a/css/css.css
+++ b/css/css.css
@@ -600,7 +600,7 @@ margin-bottom: 1em;
 }
 
 #life-img{
-  background:url(../img/life.jpg);
+  background:url(../img/video.jpg);
   background-size:cover;
   background-repeat:no-repeat;
 }
