--- a/css/css.css
+++ b/css/css.css
@@ -599,7 +599,7 @@ margin-bottom: 1em;
   background-repeat:no-repeat;
 }
 
-#life-img{
+#video-img{
   background:url(../img/video.jpg);
   background-size:cover;
   background-repeat:no-repeat;
