--- a/css/css.css
+++ b/css/css.css
@@ -919,6 +919,13 @@ display: flex;
 .myintro{
   padding: 8vw;
 }
+
+iframe{
+  width: 100%；
+  height: 49.5vw;
+}
+
+
 @media only screen 
   and (min-device-width: 375px) 
   and (orientation: landscape) { 
@@ -1037,6 +1044,13 @@ width: 50%;
   padding: 0;
   font-size: 1em;
 }
+
+iframe{
+  width: 100%；
+  height: 22.5vw;
+}
+
+
 
 
 }
