--- a/css/css.css
+++ b/css/css.css
@@ -921,7 +921,7 @@ display: flex;
 }
 
 iframe{
-  width: 100%；
+  width: 100%;
   height: 49.5vw;
 }
 
@@ -1046,7 +1046,7 @@ width: 50%;
 }
 
 iframe{
-  width: 100%；
+  width: 100%;
   height: 22.5vw;
 }
 
