--- a/css/css.css
+++ b/css/css.css
@@ -561,6 +561,9 @@ margin-bottom: 1em;
   border: 0px solid red;
   border-radius: 3px 3px 0 0 ;
 }
+.video-image{
+  height: 49.5vw;
+}
 .darker{
   width: 100%;
   height: 100%;
@@ -1007,6 +1010,9 @@ iframe{
   height: 26.666vw;
   border: 0px solid red;
 }
+.video-image{
+  height: 22.5vw;
+}
 .gallery-right{
 margin-left: 4vw;
 }
@@ -1276,6 +1282,8 @@ margin-top: 0;
   border: 0px solid red;
   border-radius: 4px 4px 0 0;
 }
+
+
 .darker:hover{
   opacity: 0;
 }
