--- a/css/css.css
+++ b/css/css.css
@@ -1284,6 +1284,10 @@ margin-top: 0;
   border: 0px solid red;
   border-radius: 4px 4px 0 0;
 }
+.video-image{
+  height: 22.5vw;
+}
+
 
 
 .darker:hover{
