--- a/css/css.css
+++ b/css/css.css
@@ -386,7 +386,7 @@ height: 100%;
 max-width: 100%;
 height: auto;
 top: 0%;
-border: 0px solid blue;
+border: 0px solid red;
 }
 #banner-text{
   margin: auto;
